--- a/css/common.less
+++ b/css/common.less
@@ -10,15 +10,16 @@
 @import url('global/font.less');		//默认字体
 @import url('global/layout.less');		//默认布局
 
-@import url('common/c-header/c-header.less');		//公共头
-@import url('common/c-footer/c-footer.less');		//公共底部
-@import url('common/i-header/i-header.less');		//移动公共头
-@import url('common/i-footer/i-footer.less');		//移动公共底部
+@import url('common/c-header.less');		//公共头
+@import url('common/c-footer.less');		//公共底部
+@import url('common/i-header.less');		//移动公共头
+@import url('common/i-footer.less');		//移动公共底部
 
 @import url('ui/button.less');			//按钮
 @import url('ui/form.less');			//表单
 @import url('ui/route.less');			//面包屑
 @import url('ui/tab.less');				//tab卡
+@import url('ui/mask.less');			//遮罩层
 
 @import url('widget/w-route.less');			//面包屑
 @import url('widget/w-category.less');		//主题分类
@@ -30,7 +31,32 @@
 @import url('widget/w-stamp.less');			//图章
 @import url('widget/w-tgpost.less');		//折叠楼层
 @import url('widget/w-fastpost.less');		//快速回复
-@import url('widget/w-rate.less');			//评分窗口
+@import url('widget/w-dialog.less');		//dz默认弹层
 
+@import url('common/c-report.less');		//举报
+@import url('common/c-rate.less');			//评分
 
 @import url('forum/reset.less');	
+@import url('forum/c-fli.less');
+
+@import url('forum/c-fli-title.less');
+@import url('forum/c-fli-meta.less');
+@import url('forum/c-fli-info.less');
+@import url('forum/c-fli-header.less');	
+
+@import url('forum/c-fli-footer.less');	
+@import url('forum/c-fli-commend.less');	
+@import url('forum/c-fli-panel.less');	
+
+@import url('forum/c-fli-content.less');
+@import url('forum/c-fli-tips.less');	
+@import url('forum/c-fli-pay.less');	
+@import url('forum/c-fli-custom.less');	
+@import url('forum/c-fli-primary.less');	
+@import url('forum/c-fli-rate.less');	
+@import url('forum/c-fli-cmt.less');	
+
+
+
+
+
