--- a/css/forum/c-fli-content.less
+++ b/css/forum/c-fli-content.less
@@ -1,56 +1,8 @@
-//楼层公共
-.c-fli-common{
-	.pr;
-	border-bottom:1px solid #ddd;
-	padding:10px 0;
-	margin-bottom:10px;
-}
-
-//首楼
-.c-fli-first{
-
-}
-//副楼
-.c-fli{
-
-}
 //内容包裹区
 .c-fli-content{
-
+	
 }
 
-//副标题
-.c-fli-title{
-	.bold;
-	margin:10px 0 0 0;
-	color:@blue-link;
-}
-
-//提示信息
-.c-fli-tips{
-
-}
-
-//分类信息
-.c-fli-custom{
-	margin:10px auto;
-	padding-bottom:10px;
-	line-height:2.5;
-
-	ul{}
-	li{}
-	border-bottom:1px solid #eee;
-	em{
-		background-color:#f2f2f2;
-		.r(2px);
-		padding: 3px 6px;
-		margin-right: 5px;
-		color:#555;
-	}
-	span{
-
-	}
-}
 
 //内容区
 .t_fsz{
@@ -72,6 +24,9 @@
 	}
 	.color(#888,#888,#222);
 }
+.ua-responsive .screen-s {
+	.c-fli-modact{.none;}
+}
 
 //附件
 .c-fli-attachment{
@@ -81,30 +36,4 @@
 //快速回复
 .c-fli-fastreply{
 	.none;
-}
-
-//点评
-.c-fli-cmt{
-	/*margin:10px 20px;
-	border-top:1px solid #ddd;*/
-	.psth{
-		/*background: none;
-		padding:0;
-		margin:0;
-		border-bottom:1px dashed #ddd;
-		padding-bottom:10px;
-		margin-bottom:10px;*/
-		margin-bottom:10px;
-	}
-	.psta{
-		.nobreak;
-	}
-	.pstl{
-		margin-bottom:20px;
-	}
-}
-
-//评分
-.c-fli-rate{
-
 }
