--- a/css/forum/c-fli-footer.less
+++ b/css/forum/c-fli-footer.less
@@ -1,165 +1,5 @@
 .c-fli-footer{
-
-}
-
-.c-panel{
-	.clearfix;
-	/*border:1px solid #ddd;
-	.lh(24px);
-	border-radius: 6px;
-	padding: 2px 10px;
-	margin-bottom:5px;
-	.color(#777,#777,#333);
-	background-color:#fcf9fa;*/
-	.tm(0.4);
-	transition:opacity 0.2s ease-in-out;
-}
-.c-fli-common:hover{
-	.c-panel{.tm(1);}
-}
-
-.c-panel-left{
-	.fl;
-}
-
-.c-panel-right{
-	.fr;
-}
-
-.c-commend{
-	.x;
-	margin:20px auto 40px auto;
-	.clearfix;
-
-	.u-top,.u-color,.u-zan,.u-rate{
-		.dbi;margin:0 10px;
-		.fz(12px,16px);
-		.r(2px);
-		padding:4px 8px;
-		.clip;
-
-		i{.dbi;.y;.size(16px);margin-right:5px;}
-		.color(@zhblue,@zhblue);
-		border:1px solid @zhblue;
-
-		&:hover{
-			i{
-				animation:goUp 0.4s ease-in-out;
-			}
-		}
-	}
-
-	.u-top{
-		i{background:url('@{url}forum/top.png') no-repeat 0 0;}
-	}
-	.u-color{
-		i{background:url('@{url}forum/color.png') no-repeat 0 0;}
-	}
-	.u-zan{
-		i{background:url('@{url}forum/heart.png') no-repeat 0 0;}
-	}
-	.u-rate{
-		i{background:url('@{url}forum/rate.png') no-repeat 0 0;}
-	}
-}
-
-.c-panel{
-	.color(#999,#999,@zhblue);
-
-	a{
-		background: none;
-		margin-right:5px;
-	}
-
-	i{.dbi;.y;background:url('@{url}header/icons2.png') no-repeat 0 0;}
-
-	.u-edit{
-		i{
-			.size(12px,12px);margin-right:3px;
-			background-position: -120px -51px;
-		}
-		&:hover{
-			i{background-position: -133px -51px;}
-		}
-	}
-
-	.u-cmt,.u-reply{
-		i{
-			.size(9px,12px);margin-top:-2px;margin-right:3px;
-			background-position: -28px -22px;
-		}
-		&:hover{
-			i{background-position:-28px -37px;}
-		}
-	}
-
-	.u-reply{
-
-	}
-
-	.u-pub{
-		i{
-			.size(14px,12px);
-			margin-top:-2px;margin-right:3px;
-			background-position: -90px -4px;
-		}
-	}
-
-	.u-push{
-		i{
-			.size(12px,12px);
-			margin-top:-2px;margin-right:3px;
-		    background-position: -27px -67px;
-		}
-	}
-
-	.u-good,.u-bad{
-		i{
-			.size(12px,12px);
-			margin-top:-2px;margin-right:1px;
-		}
-	}
-
-	.u-good{
-		i{
-			background-position: -108px -22px;
-		}
-		&:hover{
-			i{background-position:-108px -37px;}
-		}
-	}
-
-	.u-bad{
-		i{
-			background-position: -121px -22px;
-		}
-		&:hover{
-			i{background-position:-121px -37px;}
-		}
-	}
-
-	.u-best{
-		i{
-			.size(12px,14px);
-			margin-top:-2px;margin-right:3px;
-		    background-position: -210px -147px;
-		}
-	}
-
-	.u-rate{
-		i{
-			.size(12px,12px);
-			margin-top:-2px;margin-right:3px;
-		    background-position: -249px -46px;
-		}
-	}
-
-	.u-report{
-		i{
-			.size(12px,12px);
-			margin-top:-2px;margin-right:3px;
-		    background-position: -71px -182px;
-		}
-	}
-
+	border-bottom:1px solid #ddd;
+	padding-bottom:10px;
+	margin-bottom:10px;
 }
