--- a/css/forum/c-fli.less
+++ b/css/forum/c-fli.less
@@ -1,7 +1,3 @@
-.wp{
-	.w(@wp);
-}
-
 .default-main{
 	.pr;
 	padding:10px 0;
@@ -24,4 +20,19 @@
 	.default-content{
 		margin-left:0;
 	}
+}
+
+//楼层公共
+.c-fli-common{
+	.pr;
+}
+
+//首楼
+.c-fli-first{
+	border-top:1px dotted #ddd;
+	margin-top:10px;
+}
+//副楼
+.c-fli{
+
 }
