--- a/css/public/animation.less
+++ b/css/public/animation.less
@@ -7,12 +7,19 @@
     from{opacity:1;}
     to{opacity:0;}
 }
+@keyframes slideUpMenu{
+    from{transform:translateY(100%);}
+    to{transform:translateY(0);}
+}
+@keyframes slideDownMenu{
+    from{transform:translateY(0);}
+    to{transform:translateY(100%);}
+}
 @keyframes goUp{
     49%{transform:translateY(-100%)}
     50%{opacity:.3;transform:translateY(40%)}
     51%{opacity:1}
 }
-
 @keyframes open{
     from{height:0;}
     to{height:auto;}
