--- a/css/tobe/module/dialog.less
+++ b/css/tobe/module/dialog.less
@@ -1,11 +1,11 @@
 .iframe-header .w-dialog{.none !important;}
 
-.u-dialog-mask{
+/*.u-dialog-mask{
 	.fixed(lt);.z(30);
 	.tb(0,0,0,0.4);
 	.full;
 }
-
+*/
 .w-dialog{
 	.fixed(o,600,300);.z(120);
 	.size(600px,300px);
