--- a/template/default/common/footer_common.htm
+++ b/template/default/common/footer_common.htm
@@ -63,7 +63,10 @@
 	</div>
 </div>
 
-<!-- jx3pve:c-dialog-->
+<!-- jx3pve:u-mask-->
+<!--{template common/mask}-->
+
+<!-- jx3pve:w-dialog-->
 <!--{template common/dialog}-->
 
 <!-- jx3pve:c-float -->
