--- a/template/default/forum/viewthread_middle.htm
+++ b/template/default/forum/viewthread_middle.htm
@@ -1,13 +1,10 @@
 <!--{hook/viewthread_beginline}-->
 <div id="postlist" class="pl bm">
 
-	<div class="c-forum-top">
-		<!-- jx3pve:c_forum_title -->
-		<!--{subtemplate component/c_forum_title}-->
-
-		<!-- jx3pve:c_forum_mark -->
-		<!--{subtemplate component/c_forum_mark}-->
-	</div>
+	<!-- jx3pve:c_fli_title -->
+	<!--{subtemplate component/c_fli_title}-->
+	<!--{subtemplate component/c_fli_meta}-->
+	<!--{subtemplate component/c_fli_info}-->
 
 	<!--{eval $postcount = 0;}-->
 	<!--{loop $postlist $post}-->
