--- a/css/common/i-header/all.less
+++ b/css/common/i-header/all.less
@@ -11,7 +11,7 @@
 }
 .i-header-title{
 	.x;.bold;
-	font-size:14px;
+	font-size:1.2rem;
 }
 .i-header-back{
 	.pa;.lt(0,0);
@@ -28,12 +28,39 @@
 	}
 	span{
 		padding-left:24px;
-		.fz(14px);.bold;
+		.fz(1rem);.bold;
 		.none;
 	}
 }
+.i-header-menu{
+	.pa;.rt(0,0);
+
+	.u-only{
+		.fl;
+		border:1px solid #eee;
+		.r(2px);
+		.fz(13px,18px);
+		padding:2px 8px;
+		margin-top:12px;
+		margin-right:20px;
+
+		&.on{
+			background-color:@basecolor;
+			//color:@blue;
+		}
+	}
+
+	.u-all{
+		.db;.fl;
+		span{.none;}
+		.size(32px,24px);
+		background:~"url('@{url}forum/i-menu-more.svg') no-repeat 0 0 / auto 100%";
+		margin-top:11px;
+		padding-right:10px;
+	}
+}
+
 .i-header-nav{.fl;}
-.i-header-panel{.fr;}
 .i-header-extend{
 	.pa;.rt(0,@c-header-height);.z(100);
 	.none;
@@ -68,6 +95,3 @@
 
 .i-header{.none;}
 .ua-responsive .screen-s .i-header{.db;}
-.ua-responsive .screen-s{
-	.i-header-title{font-size:1.2rem;}
-} 
