--- a/template/default/component/c_fli_header.htm
+++ b/template/default/component/c_fli_header.htm
@@ -1,3 +1,4 @@
+<div class="c-fli-header">
 <!--{if !$post[first]}-->
 	<!-- 头像 -->
 	<a class="avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a>
@@ -32,3 +33,4 @@
 		</div>
 	<!--{/if}-->
 <!--{/if}-->
+</div>
