--- a/template/default/component/c_fli_panel.htm
+++ b/template/default/component/c_fli_panel.htm
@@ -1,49 +1,7 @@
-<!--{if !IS_ROBOT && $post['first'] && !$_G['forum_thread']['archiveid']}-->
-	<!--{if $post['invisible'] == 0}-->
-
-	<div class="c-commend">
-		<!-- 置顶 -->
-		<!--{if !empty($_G['setting']['magics']['stick'])}-->
-			<a class="u-top" title="置顶" href="home.php?mod=magic&mid=stick&idtype=tid&id=$_G[tid]" id="a_stick" onclick="showWindow(this.id, this.href)"><i></i>置顶</a>
-		<!--{/if}-->
-
-		<!-- 高亮 -->
-		<!--{if !empty($_G['setting']['magics']['highlight'])}-->
-			<a class="u-color" title="高亮" href="home.php?mod=magic&mid=highlight&idtype=tid&id=$_G[tid]" id="a_stick" onclick="showWindow(this.id, this.href)"><i></i>高亮</a>
-		<!--{/if}-->
-
-		<!-- dz:点赞 -->
-		<!--{if ($_G['group']['allowrecommend'] || !$_G['uid']) && $_G['setting']['recommendthread']['status']}-->
-			<!--{if !empty($_G['setting']['recommendthread']['addtext'])}-->
-			<a class="u-zan" id="recommend_add" href="forum.php?mod=misc&action=recommend&do=add&tid=$_G[tid]&hash={FORMHASH}" {if $_G['uid']}onclick="ajaxmenu(this, 3000, 1, 0, '43', 'recommendupdate({$_G['group']['allowrecommend']})');return false;"{else} onclick="showWindow('login', this.href)"{/if} onmouseover="this.title = $('recommendv_add').innerHTML + ' {lang activity_member_unit}$_G[setting][recommendthread][addtext]'" title="{lang maketoponce}">
-				<i></i>推荐
-				<span id="recommendv_add"{if !$_G['forum_thread']['recommend_add']} style="display:none"{/if}>
-					$_G[forum_thread][recommend_add]</span>
-				</a>
-			<!--{/if}-->
-		<!--{/if}-->
-
-		<!-- 评分 -->
-		<!--{if $_G['group']['raterange'] && $post['authorid']}-->
-			<a class="u-rate" href="javascript:;" id="ak_rate" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;" title="{lang rate_position}">
-				<i></i>送分
-			</a>
-		<!--{/if}-->
-
-		<!--{hook/viewthread_useraction}-->
-	</div>
-	<!--{/if}-->
-<!--{/if}-->
-
-<div class="u-thread-goto none">
-	<a href="forum.php?mod=redirect&goto=nextoldset&tid=$_G[tid]" title="{lang last_thread}"><img src="{IMGDIR}/thread-prev.png" alt="{lang last_thread}" class="vm" /></a>
-	<a href="forum.php?mod=redirect&goto=nextnewset&tid=$_G[tid]" title="{lang next_thread}"><img src="{IMGDIR}/thread-next.png" alt="{lang next_thread}" class="vm" /></a>
-</div>
-
 <!-- dz:操作面板 -->
 <!--{if !$_G['forum_thread']['archiveid']}-->
-	<div class="c-panel">
-		<div class="c-panel-left">
+	<div class="c-fli-panel">
+		<div class="c-fli-panel-left">
 
 			<!-- 编辑追加 -->
 			<!--{if (($_G['forum']['ismoderator'] && $_G['group']['alloweditpost'] && (!in_array($post['adminid'], array(1, 2, 3)) || $_G['adminid'] <= $post['adminid'])) || ($_G['forum']['alloweditpost'] && $_G['uid'] && ($post['authorid'] == $_G['uid'] && $_G['forum_thread']['closed'] == 0) && !(!$alloweditpost_status && $edittimelimit && TIMESTAMP - $post['dbdateline'] > $edittimelimit)))}-->
@@ -66,15 +24,15 @@
 			<!--{if $post['invisible'] == 0}-->
 				<!-- 点评 -->
 				<!--{if $allowpostreply && $post['allowcomment'] && (!$thread['closed'] || $_G['forum']['ismoderator'])}-->
-					<a class="cmmnt u-cmt" href="forum.php?mod=misc&action=comment&tid=$post[tid]&pid=$post[pid]&extra=$_GET[extra]&page=$page{if $_G['forum_thread']['special'] == 127}&special=$specialextra{/if}" onclick="showWindow('comment', this.href, 'get', 0)"><i></i>{lang comments}</a>
+					<a class="cmmnt u-cmt u-mask-tg" href="forum.php?mod=misc&action=comment&tid=$post[tid]&pid=$post[pid]&extra=$_GET[extra]&page=$page{if $_G['forum_thread']['special'] == 127}&special=$specialextra{/if}" onclick="showWindow('comment', this.href, 'get', 0)"><i></i>{lang comments}</a>
 				<!--{/if}-->
 
 				<!-- 快速回复 -->
 				<!--{if (!$_G['uid'] || $allowpostreply) && !$needhiddenreply}-->
 					<!--{if $post['first']}-->
-						<a class="fastre u-reply" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&reppost=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>{lang reply}</a>
+						<a class="fastre u-reply u-mask-tg" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&reppost=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>{lang reply}</a>
 					<!--{else}-->
-						<a class="fastre u-reply" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&repquote=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>{lang reply}</a>
+						<a class="fastre u-reply u-mask-tg" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&repquote=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>{lang reply}</a>
 					<!--{/if}-->
 				<!--{/if}-->
 			<!--{/if}-->
@@ -90,7 +48,7 @@
 			<!--{hook/viewthread_postfooter $postcount}-->
 		</div>
 		
-		<div class="c-panel-right">
+		<div class="c-fli-panel-right">
 			<!--{if $post['invisible'] == 0}-->
 
 				<!-- 设为最佳答案 -->
@@ -100,17 +58,17 @@
 
 				<!-- 评分 -->
 				<!--{if !$post['first'] && $_G['group']['raterange'] && $post['authorid']}-->
-					<a class="u-rate" href="javascript:;" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;"><i></i>{lang rate}</a>
+					<a class="u-rate u-mask-tg" href="javascript:;" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;"><i></i>{lang rate}</a>
 				<!--{/if}-->
 
 				<!-- 撤销评分 -->
 				<!--{if !empty($postlist[$post[pid]]['totalrate']) && $_G['forum']['ismoderator']}-->
-					<a class="u-rate" href="forum.php?mod=misc&action=removerate&tid=$_G[tid]&pid=$post[pid]&page=$page" onclick="showWindow('rate', this.href, 'get', -1)"><i></i>{lang removerate}</a>
+					<a class="u-rate u-removerate u-mask-tg" href="forum.php?mod=misc&action=removerate&tid=$_G[tid]&pid=$post[pid]&page=$page" onclick="showWindow('rate', this.href, 'get', -1)"><i></i>{lang removerate}</a>
 				<!--{/if}-->
 
 				<!-- 举报 -->
 				<!--{if $post['authorid'] != $_G['uid']}-->
-					<a class="u-report" href="javascript:;" onclick="showWindow('miscreport$post[pid]', 'misc.php?mod=report&rtype=post&rid=$post[pid]&tid=$_G[tid]&fid=$_G[fid]', 'get', -1);return false;"><i></i>{lang report}</a>
+					<a class="u-report u-mask-tg" href="javascript:;" onclick="showWindow('miscreport$post[pid]', 'misc.php?mod=report&rtype=post&rid=$post[pid]&tid=$_G[tid]&fid=$_G[fid]', 'get', -1);return false;"><i></i>{lang report}</a>
 				<!--{/if}-->
 
 				<!-- 管理 -->
