--- a/css/common/c-header/userstatus.less
+++ b/css/common/c-header/userstatus.less
@@ -47,7 +47,19 @@
     }
     .username{
     	.db;.nobreak;
-        a:hover{text-decoration:none;}
+        .pr;
+        b{
+            .w(18px);.lh(16px,18px);.r(18px);
+            background-color: #f00;
+            text-align: center;
+            position: absolute;
+            top: 7px;
+            right: 0;
+            .none;
+
+            font-size:12px;
+            font-family: sans-serif;
+        }
     }
 
     .m-extend{
