--- a/css/forum/c-fli-rate.less
+++ b/css/forum/c-fli-rate.less
@@ -1,6 +1,29 @@
 //评分
 .c-fli-rate{
-	//overflow:hidden;
+	//标题
+	.psth{
+		background:#f2f2f2;
+		.lh(28px);
+		margin:0;
+		padding:0;
+		padding-left:10px;
+		width:auto;
+		color:#444;
+		.icon_ring{.none;}
+	}
+	.rate{
+		padding:10px;
+		margin:0;
+	}
+	.ratl{
+		.w(100%);
+		th{font-weight:normal;}
+		th,td{border-bottom:1px dashed #ddd;line-height:32px;}
+		img{.size(18px);.y;margin-top:-4px;}
+	}
+	.ratc{
+		line-height:32px;
+	}
 
 }
 
