--- a/css/global.less
+++ b/css/global.less
@@ -10,7 +10,7 @@
 
 /*public 公共方法
 ------------------------------------------*/
-@import url('tobe/public/reset.less');		//重置
+/*@import url('tobe/public/reset.less');		//重置*/
 @import url('tobe/public/base.less');		//函数
 @import url('tobe/public/bak.less');			//旧函数兼容
 @import url('tobe/public/shape.less');		//绘制
