--- a/css/global/font.less
+++ b/css/global/font.less
@@ -12,10 +12,10 @@ body{
     background-color:@blue-link;
 }
 a {
-	//color:#444;
+	
 }
 a:hover {
-	//color:@blue-link;text-decoration: none;
+	//text-decoration: none;
 }
 
 .ua-responsive .screen-s{
