--- a/css/global/var.less
+++ b/css/global/var.less
@@ -1,3 +1,10 @@
+//path
+@url: 'http://img.jx3pve.com/img/';
+@app: 'http://app.jx3pve.com/img/app/';
+@urls: 'http://static.jx3pve.com/static/image/';
+
+
+//size
 @c-header-height:45px;
 @c-header-footer:46px;
 
