--- a/css/widget/w-fastpost.less
+++ b/css/widget/w-fastpost.less
@@ -48,10 +48,20 @@
 	//mobile
 	.screen-s{
 		.w-fastpost-button{
+			//按钮附近的移除
 			.y,label{.none;}
 			.pn{
 				.w(100%);
 			}
-		} 
+		}
+		.w-fastpost-content .bar{
+			//隐藏部分编辑器功能
+			.fpd a.fqt,.fpd a.fcd,.fpd a.fat{
+				.none;
+			}
+		}
+		.w-fastpost-tip .attips{
+			.none;
+		}
 	}
 }
