--- a/css/widget/w-route.less
+++ b/css/widget/w-route.less
@@ -1,5 +1,10 @@
 #pt{
-	.nobreak;
+	.auto(x);
+	border:none;
+	padding: 5px 0;
+    border-bottom: 1px dotted #ddd;
+    .lh(29px);
+    .nobreak;
 }
 .ua-responsive .screen-s{
 	#pt{
