--- a/css/widget/w-tgpost.less
+++ b/css/widget/w-tgpost.less
@@ -1,6 +1,6 @@
 .w-tgpost{
 	margin:10px 0;
-	.fzlh(12px,26px);
+	.lh(26px);
 	i{
 		background:url('@{url}icon/add.gif') no-repeat 0 0;
 		.dbi;.size(13px);.y(-2px);margin-right:5px;
@@ -16,6 +16,6 @@
 	&:hover{
 		background-color:#f6f6f6;
 		border:1px solid #ddd;
-		color:@bluex;
+		color:@blue-link;
 	}
 }
