--- a/template/default/common/css.htm
+++ b/template/default/common/css.htm
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="http://css.jx3pve.com/css/public/reset.css" type="text/css" />
+
 <link rel="stylesheet" href="http://test.jx3pve.com/css/global.css" type="text/css" />
-<!-- this style is for public modules -->
+
 <link rel="stylesheet" href="http://test.jx3pve.com/css/common.css" type="text/css" />
