--- a/template/default/common/header_userstatus.htm
+++ b/template/default/common/header_userstatus.htm
@@ -9,6 +9,7 @@
 				</span>
 				<span class="username">
 					{$_G[member][username]}
+					<b id="c-header-msg-count"></b>
 				</span>
 			</a>
 		</div>
