--- a/template/default/common/panel.htm
+++ b/template/default/common/panel.htm
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 
-		<script src="http://js.jx3pve.com/js/mod/header.js"></script>
+		<script src="http://js.jx3pve.com/js/mod/header.min.js"></script>
 
 	<!--{hook/global_header}-->
 	<!--{/if}-->
