--- a/template/default/component/c_fli_header.htm
+++ b/template/default/component/c_fli_header.htm
@@ -32,5 +32,8 @@
 			{lang replycredit} <b>+{$post['replycredit']}</b> {$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][unit]}{$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][title]}
 		</div>
 	<!--{/if}-->
+
+	<span class="more"></span>
+
 <!--{/if}-->
 </div>
