--- a/css/common.less
+++ b/css/common.less
@@ -1,62 +1,15 @@
 @import url('public/base.less');		//函数
-@import url('public/path.less');		//路径
 @import url('public/shape.less');		//形状
 @import url('public/animation.less');	//动画
 
 @import url('global/var.less');			//常量
 @import url('global/color.less');		//配色
-@import url('global/tips.less');		//提醒
-
 @import url('global/font.less');		//默认字体
 @import url('global/layout.less');		//默认布局
 
-@import url('common/c-header.less');		//公共头
-@import url('common/c-footer.less');		//公共底部
-@import url('common/i-header.less');		//移动公共头
-@import url('common/i-footer.less');		//移动公共底部
-
-@import url('ui/button.less');			//按钮
-@import url('ui/form.less');			//表单
-@import url('ui/route.less');			//面包屑
-@import url('ui/tab.less');				//tab卡
-@import url('ui/mask.less');			//遮罩层
-
-@import url('widget/w-route.less');			//面包屑
-@import url('widget/w-category.less');		//主题分类
-@import url('widget/w-order.less');			//主题排序
-@import url('widget/w-filter.less');		//主题筛选
-@import url('widget/w-pages.less');			//分页
-@import url('widget/w-adminbar.less');		//管理操作条
-@import url('widget/w-adminpop.less');		//管理操作弹出面板
-@import url('widget/w-stamp.less');			//图章
-@import url('widget/w-tgpost.less');		//折叠楼层
-@import url('widget/w-fastpost.less');		//快速回复
-@import url('widget/w-dialog.less');		//dz默认弹层
-
-@import url('common/c-report.less');		//举报
-@import url('common/c-rate.less');			//评分
-
-@import url('forum/reset.less');	
-@import url('forum/c-fli.less');
-
-@import url('forum/c-fli-title.less');
-@import url('forum/c-fli-meta.less');
-@import url('forum/c-fli-info.less');
-@import url('forum/c-fli-header.less');	
-
-@import url('forum/c-fli-footer.less');	
-@import url('forum/c-fli-commend.less');	
-@import url('forum/c-fli-panel.less');	
-
-@import url('forum/c-fli-content.less');
-@import url('forum/c-fli-tips.less');	
-@import url('forum/c-fli-pay.less');	
-@import url('forum/c-fli-custom.less');	
-@import url('forum/c-fli-primary.less');	
-@import url('forum/c-fli-rate.less');	
-@import url('forum/c-fli-cmt.less');	
-
-
-
+@import url('ui/ui.less');				//元件
+@import url('widget/widget.less');		//组件
+@import url('common/common.less');		//公共模块
+@import url('forum/forum.less');		//论坛版块
 
 
