--- a/css/forum/c-fli-commend.less
+++ b/css/forum/c-fli-commend.less
@@ -35,5 +35,15 @@
 	}
 }
 .ua-responsive .screen-s .c-fli-commend{
-	a{.db;margin:10px;padding:10px;}
+	//a{.db;margin:10px;padding:10px;}
+
+	.u-top,.u-color,.u-zan,.u-rate{
+		//border:none;
+		font-size:12px;
+		padding:5px 10px;
+		background-color:#f2f2f2;
+		border-color:#ddd;
+		color:#666;
+		i{.none;}
+	}
 }
