--- a/css/global/color.less
+++ b/css/global/color.less
@@ -1,8 +1,8 @@
+//color
 @blue-light:#0cf;
 @blue-toolight:#97EAFF;
 @blue-link:#259;
 @blue-dark:#0767c8;
-
 
 @blue: #00ccff;     //天蓝
 @bluex: #049abf;    //海青蓝
@@ -17,3 +17,32 @@
 
 @orange-block:#FF9A33;
 @zhblue:#698ebf;
+
+
+//tips style 
+.tips(yel){
+	border: 1px solid #FFD403;
+  	background-color: #FFF897;
+}
+
+.tips(grays){
+	color: #dd0055;
+	border: 1px solid #ddd;
+	background: #fafafa;
+	border-radius: 3px;
+	box-shadow: 0 0 1px #eee inset;
+}
+
+.tips(warning){
+	.tips(yel);
+	padding: 5px 10px;
+	a{
+		color:@bluex;text-decoration:underline;
+		&:hover{color:#d05;}
+	}
+	i{
+		background:url('@{url}icon/icon-report-16.png') no-repeat 0 0;.size(16px);
+		.dbi;
+		vertical-align: -3px;margin-right: 4px;
+	}
+}
