--- a/template/macro/forum/post.htm
+++ b/template/macro/forum/post.htm
@@ -7,7 +7,7 @@
  -->
 
 <!-- jx3pve:code -->
-<script src="http://js.jx3pve.com/js/page/pve-macro.js"></script>
+<script src="http://js.jx3pve.com/js/pve/pve-macro.js"></script>
 
 <!-- jx3pve:pve -->
 <div class="postpage-container pve-container macro-container pve-postpage macro-postpage">
