修改举报弹层的触发id 并修改showWindow函数阻止冒泡导致移动端无法捕捉事件关闭遮罩层 折叠回帖与水贴隐藏功能优化

--- a/css/common/c-rate.less
+++ b/css/common/c-rate.less
@@ -57,9 +57,11 @@
 	}
 }
 
-.ua-responsive .screen-s{
-	.c-rate{
-		font-size:12px;
+.ua-responsive .screen-s .c-rate{
+	font-size:12px;
+	//隐藏下拉按钮
+	.dpbtn{
+		.none;
 	}
 	.reason_slct{
 		.w(100%);
