--- a/css/forum/c-fli-rate.less
+++ b/css/forum/c-fli-rate.less
@@ -1,5 +1,6 @@
 //评分
 .c-fli-rate{
+	font-size:12px;
 	//标题
 	.psth{
 		background:#f2f2f2;
@@ -18,7 +19,7 @@
 	.ratl{
 		.w(100%);
 		th{font-weight:normal;}
-		th,td{border-bottom:1px dashed #ddd;line-height:32px;}
+		th,td{border-bottom:1px dashed #ddd;line-height:32px;.nobreak;}
 		img{.size(18px);.y;margin-top:-4px;}
 	}
 	.ratc{
