--- a/template/default/component/c_fli_commend.htm
+++ b/template/default/component/c_fli_commend.htm
@@ -24,7 +24,7 @@
 
 		<!-- 评分 -->
 		<!--{if $_G['group']['raterange'] && $post['authorid']}-->
-			<a class="u-rate u-mask-tg" href="javascript:;" id="ak_rate" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;" title="{lang rate_position}">
+			<a class="u-rate" href="javascript:;" id="ak_rate" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;" title="{lang rate_position}">
 				<i></i>送分
 			</a>
 		<!--{/if}-->
