--- a/template/default/widget/w_tgpost.htm
+++ b/template/default/widget/w_tgpost.htm
@@ -1,3 +1,4 @@
 <div class="w-tgpost" id="w-tgpost">
-	<i id="w-tgpost-icon"></i>点击 [ <em id="w-tgpost-text">展开</em> ] 回复楼层</span>
+	<i id="w-tgpost-icon"></i>点击开关回复楼层</span>
 </div>
+<script src="http://js.jx3pve.com/js/widget/w-tgpost.min.js"></script>
