--- a/css/common/i-header/all.less
+++ b/css/common/i-header/all.less
@@ -10,8 +10,7 @@
     box-shadow: 0 1px 2px rgba(0,0,0,.25),inset 0 1px 0 rgba(255,255,255,.15);
 }
 .i-header-title{
-	.x;.bold;
-	font-size:1.2rem;
+	.x;//.bold;
 }
 .i-header-back{
 	.pa;.lt(0,0);
@@ -21,8 +20,8 @@
 		.dbi;
 		border: 2px solid #fff;
 		border-width: 2px 0 0 2px;
-		width: 8px;
-		height: 8px;
+		width: 10px;
+		height: 10px;
 		margin: -5px 0 0 0;
 		transform: scale(1) rotate(-50deg) skew(-10deg) translateZ(0);
 	}
