--- a/template/default/component/c_fli_header.htm
+++ b/template/default/component/c_fli_header.htm
@@ -3,34 +3,53 @@
 	<!-- 头像 -->
 	<a class="avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a>
 
-	<!-- 用户名 -->
-	<a class="name" href="home.php?mod=space&uid=$post[authorid]" target="_blank" class="xi2"{if $post[groupcolor]} style="color: $post[groupcolor]"{/if}>$post[author]</a>
-
-	<!-- 发布时间 -->
-	<span class="time">发布于 $post[dateline]</span>
-
-	<!-- 楼层 -->
-	<!--{if !IS_ROBOT}-->
-	<span class="floor" id="postnum$post[pid]">
-		<!--{if isset($post[isstick])}-->
-			<i class="u-settop"></i> {lang from} {$post[number]}{$postnostick}
-		<!--{elseif $post[number] == -1}-->
-			{lang recommend}
-		<!--{else}-->
-			<!--{if !empty($postno[$post[number]])}-->
-				$postno[$post[number]]
-			<!--{else}-->
-				<em>{$post[number]}</em>{$postno[0]}
+	<span class="info">
+		<span class="info-1">
+			<!-- 用户名 -->
+			<a class="name" href="home.php?mod=space&uid=$post[authorid]" target="_blank" class="xi2"{if $post[groupcolor]} style="color: $post[groupcolor]"{/if}>$post[author]</a>
+			<!-- 用户组 -->
+			<a class="usergroup u-group u-group-$post[groupid]" href="home.php?mod=spacecp&ac=usergroup&gid=$post[groupid]"><em id="u-usergroup-id">$post[groupid]</em></a>
+			<!-- 认证 -->
+			<span class="verif">$authorverifys</span>
+		</span>
+		<span class="info-2">
+			<!-- 发布时间 -->
+			<span class="time">发布于 $post[dateline]</span>
+			<!-- 楼层 -->
+			<!--{if !IS_ROBOT}-->
+			<span class="floor" id="postnum$post[pid]">
+				<!--{if isset($post[isstick])}-->
+					<i class="u-settop"></i> {lang from} {$post[number]}{$postnostick}
+				<!--{elseif $post[number] == -1}-->
+					{lang recommend}
+				<!--{else}-->
+					<!--{if !empty($postno[$post[number]])}-->
+						$postno[$post[number]]
+					<!--{else}-->
+						<em>{$post[number]}</em>{$postno[0]}
+					<!--{/if}-->
+				<!--{/if}-->
+			</span>
 			<!--{/if}-->
-		<!--{/if}-->
-	</span>
-	<!--{/if}-->
+			<!-- 回帖奖励获得的奖励 -->
+			<!--{if !$post['first'] && $post['replycredit'] > 0}-->
+				<div class="c-fli-replycredit">
+					{lang replycredit} <b>+{$post['replycredit']}</b> {$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][unit]}{$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][title]}
+				</div>
+			<!--{/if}-->
+		</span>
 
-	<!-- 回帖奖励获得的奖励 -->
-	<!--{if !$post['first'] && $post['replycredit'] > 0}-->
-		<div class="c-fli-replycredit">
-			{lang replycredit} <b>+{$post['replycredit']}</b> {$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][unit]}{$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][title]}
-		</div>
+
+	</span>
+	
+
+	
+
+	<!--{if $post['invisible'] == 0}-->
+		<!-- 点评 -->
+		<!--{if $allowpostreply && $post['allowcomment'] && (!$thread['closed'] || $_G['forum']['ismoderator'])}-->
+			<a class="cmmnt u-cmt u-mask-tg" href="forum.php?mod=misc&action=comment&tid=$post[tid]&pid=$post[pid]&extra=$_GET[extra]&page=$page{if $_G['forum_thread']['special'] == 127}&special=$specialextra{/if}" onclick="showWindow('comment', this.href, 'get', 0)"><i></i>回复</a>
+		<!--{/if}-->
 	<!--{/if}-->
 
 	<span class="more"></span>
