--- a/template/default/component/c_fli_panel.htm
+++ b/template/default/component/c_fli_panel.htm
@@ -20,19 +20,13 @@
 				<span class="xg1">({lang moderate_need})</span>
 			<!--{/if}-->
 
-
 			<!--{if $post['invisible'] == 0}-->
-				<!-- 点评 -->
-				<!--{if $allowpostreply && $post['allowcomment'] && (!$thread['closed'] || $_G['forum']['ismoderator'])}-->
-					<a class="cmmnt u-cmt u-mask-tg" href="forum.php?mod=misc&action=comment&tid=$post[tid]&pid=$post[pid]&extra=$_GET[extra]&page=$page{if $_G['forum_thread']['special'] == 127}&special=$specialextra{/if}" onclick="showWindow('comment', this.href, 'get', 0)"><i></i>{lang comments}</a>
-				<!--{/if}-->
-
 				<!-- 快速回复 -->
 				<!--{if (!$_G['uid'] || $allowpostreply) && !$needhiddenreply}-->
 					<!--{if $post['first']}-->
-						<a class="fastre u-reply u-mask-tg" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&reppost=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>{lang reply}</a>
+						<a class="fastre u-reply" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&reppost=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>引用</a>
 					<!--{else}-->
-						<a class="fastre u-reply u-mask-tg" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&repquote=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>{lang reply}</a>
+						<a class="fastre u-reply" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&repquote=$post[pid]&extra=$_GET[extra]&page=$page" onclick="showWindow('reply', this.href)"><i></i>引用</a>
 					<!--{/if}-->
 				<!--{/if}-->
 			<!--{/if}-->
@@ -58,17 +52,17 @@
 
 				<!-- 评分 -->
 				<!--{if !$post['first'] && $_G['group']['raterange'] && $post['authorid']}-->
-					<a class="u-rate u-mask-tg" href="javascript:;" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;"><i></i>{lang rate}</a>
+					<a class="u-rate" href="javascript:;" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;"><i></i>{lang rate}</a>
 				<!--{/if}-->
 
 				<!-- 撤销评分 -->
 				<!--{if !empty($postlist[$post[pid]]['totalrate']) && $_G['forum']['ismoderator']}-->
-					<a class="u-rate u-removerate u-mask-tg" href="forum.php?mod=misc&action=removerate&tid=$_G[tid]&pid=$post[pid]&page=$page" onclick="showWindow('rate', this.href, 'get', -1)"><i></i>{lang removerate}</a>
+					<a class="u-rate u-removerate" href="forum.php?mod=misc&action=removerate&tid=$_G[tid]&pid=$post[pid]&page=$page" onclick="showWindow('rate', this.href, 'get', -1)"><i></i>{lang removerate}</a>
 				<!--{/if}-->
 
 				<!-- 举报 -->
 				<!--{if $post['authorid'] != $_G['uid']}-->
-					<a class="u-report u-mask-tg" href="javascript:;" onclick="showWindow('miscreport$post[pid]', 'misc.php?mod=report&rtype=post&rid=$post[pid]&tid=$_G[tid]&fid=$_G[fid]', 'get', -1);return false;"><i></i>{lang report}</a>
+					<a class="u-report" href="javascript:;" onclick="showWindow('report', 'misc.php?mod=report&rtype=post&rid=$post[pid]&tid=$_G[tid]&fid=$_G[fid]', 'get', -1);return false;"><i></i>{lang report}</a>
 				<!--{/if}-->
 
 				<!-- 管理 -->
