--- a/template/default/forum/rate.htm
+++ b/template/default/forum/rate.htm
@@ -14,7 +14,7 @@
 	<h3 class="flb">
 		<em id="return_rate">{lang rate}</em>
 		<span>
-			<!--{if !empty($_GET['infloat'])}--><a href="javascript:;" class="flbc" onclick="hideWindow('rate')" title="{lang close}">{lang close}</a><!--{/if}-->
+			<!--{if !empty($_GET['infloat'])}--><a href="javascript:;" class="flbc u-mask-close" onclick="hideWindow('rate');hideMask();" title="{lang close}">{lang close}</a><!--{/if}-->
 		</span>
 	</h3>
 	<form class="c-rate-content" id="rateform" method="post" autocomplete="off" action="forum.php?mod=misc&action=rate&ratesubmit=yes&infloat=yes" onsubmit="ajaxpost('rateform', 'return_rate', 'return_rate', 'onerror');">
@@ -82,7 +82,7 @@
 		</div>
 		<p class="o pns">
 			<label for="sendreasonpm"><input type="checkbox" name="sendreasonpm" id="sendreasonpm" class="pc"{if $_G['group']['reasonpm'] == 2 || $_G['group']['reasonpm'] == 3} checked="checked" disabled="disabled"{/if} />{lang admin_pm}</label>
-			<button name="ratesubmit" type="submit" value="true" class="pn pnc"><span>{lang confirms}</span></button>
+			<button name="ratesubmit" type="submit" value="true" class="pn pnc u-mask-close"><span>{lang confirms}</span></button>
 		</p>
 	</form>
 </div>
@@ -94,7 +94,7 @@
 		<h3 class="flb">
 			<em id="return_rate">{lang thread_removerate}</em>
 			<span>
-				<!--{if !empty($_GET['infloat'])}--><a href="javascript:;" class="flbc" onclick="hideWindow('rate')" title="{lang close}">{lang close}</a><!--{/if}-->
+				<!--{if !empty($_GET['infloat'])}--><a href="javascript:;" class="flbc u-mask-close" onclick="hideWindow('rate');hideMask();" title="{lang close}">{lang close}</a><!--{/if}-->
 			</span>
 		</h3>
 		<input type="hidden" name="formhash" value="{FORMHASH}" />
@@ -129,7 +129,7 @@
 		<label class="z" onclick="checkall(this.form, 'logid')"><input class="pc" type="checkbox" name="chkall" />{lang checkall}</label>
 		<label for="sendreasonpm"><input type="checkbox" name="sendreasonpm" id="sendreasonpm" class="pc"{if $_G['group']['reasonpm'] == 2 || $_G['group']['reasonpm'] == 3} checked="checked" disabled="disabled"{/if} />{lang admin_pm}</label>
 		{lang admin_operation_explain}: <input name="reason" class="px vm" />
-		<button class="pn pnc vm" type="submit" value="true" name="ratesubmit"><span>{lang submit}</span></button>
+		<button class="pn pnc vm u-mask-close" type="submit" value="true" name="ratesubmit"><span>{lang submit}</span></button>
 	</div>
 </form>
 <!--{/if}-->
@@ -141,6 +141,7 @@ function succeedhandle_rate(locationhref) {
 	<!--{else}-->
 		ajaxget('forum.php?mod=viewthread&tid=$_G[tid]&viewpid={$_GET['pid']}', 'post_{$_GET['pid']}', 'post_{$_GET['pid']}');
 		hideWindow('rate');
+		hideMask();
 	<!--{/if}-->
 }
 loadcss('forum_moderator');
@@ -155,7 +156,7 @@ loadcss('forum_moderator');
 
 	<h3 class="flb">
 		<em id="return_$_GET[handlekey]">{lang board_message}</em>
-		<!--{if $_G[inajax]}--><span><a href="javascript:;" onclick="hideWindow('$_GET[handlekey]');" class="flbc" title="{lang close}">{lang close}</a></span><!--{/if}-->
+		<!--{if $_G[inajax]}--><span><a href="javascript:;" onclick="hideWindow('$_GET[handlekey]');hideMask();" class="flbc u-mask-close" title="{lang close}">{lang close}</a></span><!--{/if}-->
 	</h3>
 		<!--{if $_G[inajax]}--><input type="hidden" name="handlekey" value="$_GET[handlekey]" /><!--{/if}-->
 		<div class="c altw">
@@ -167,7 +168,7 @@ loadcss('forum_moderator');
 		</div>
 		</div>
 		<p class="o pns">
-			<button onclick="hideWindow('rate');" id="closebtn" class="pn pnc" type="button" fwin="rate"><strong>{lang close}</strong></button>
+			<button onclick="hideWindow('rate');hideMask();" id="closebtn" class="pn pnc u-mask-close" type="button" fwin="rate"><strong>{lang close}</strong></button>
 		</p>
 
 <!--{/if}-->
