--- a/template/default/home/space_magic_mybox_opreation.htm
+++ b/template/default/home/space_magic_mybox_opreation.htm
@@ -1,11 +1,7 @@
 <!--{template common/header}-->
 <!--{if empty($_GET['infloat'])}-->
 <div id="pt" class="bm cl">
-		<div class="z">
-		<a href="./" class="nvhm" title="{lang homepage}">$_G['setting']['bbname']</a> <em>&rsaquo;</em>
-		<a href="home.php">{lang useros}</a><em>&rsaquo;</em>
-		<a href="home.php?mod=medal">{lang medals}</a>
-	</div>
+	<div class="z"><a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em> $navigation</div>
 </div>
 <div id="ct" class="ct2_a wp cl">
 	<div class="mn">
@@ -26,7 +22,7 @@
 			{lang magics_operation_use}{lang magic}
 		<!--{/if}-->
 		</em>
-		<span><!--{if !empty($_GET['infloat'])}--><a href="javascript:;" class="flbc" onclick="hideWindow('$_GET[handlekey]');return false;" title="{lang close}">{lang close}</a><!--{/if}--></span>
+		<span><!--{if !empty($_GET['infloat'])}--><a href="javascript:;" class="flbc u-mask-close" onclick="hideWindow('$_GET[handlekey]');hideMask();return false;" title="{lang close}">{lang close}</a><!--{/if}--></span>
 	</h3>
 	<div class="c" id="hkey_$_GET[handlekey]">
 		<div id="return_$_GET[handlekey]"></div>
@@ -130,13 +126,13 @@
 <!--{if empty($_GET['infloat'])}--><div class="m_c"><!--{/if}-->
 <div class="o pns" id="hbtn_$_GET[handlekey]">
 	<!--{if $operation == 'give'}-->
-		<button class="pn pnc" type="submit" name="operatesubmit" id="operatesubmit" value="true" onclick="return confirmMagicOp(e)"><span>{lang magics_operation_present}</span></button>
+		<button class="pn pnc u-mask-close" type="submit" name="operatesubmit" id="operatesubmit" value="true" onclick="return confirmMagicOp(e)"><span>{lang magics_operation_present}</span></button>
 	<!--{elseif $operation == 'use'}-->
-		<button class="pn pnc" type="submit" name="usesubmit" id="usesubmit" value="true"><span>{lang magics_operation_use}</span></button>
+		<button class="pn pnc u-mask-close" type="submit" name="usesubmit" id="usesubmit" value="true"><span>{lang magics_operation_use}</span></button>
 	<!--{elseif $operation == 'sell'}-->
-		<button class="pn pnc" type="submit" name="operatesubmit" id="operatesubmit" value="true" onclick="return confirmMagicOp(e)"><span>{lang magics_operation_sell}</span></button>
+		<button class="pn pnc u-mask-close" type="submit" name="operatesubmit" id="operatesubmit" value="true" onclick="return confirmMagicOp(e)"><span>{lang magics_operation_sell}</span></button>
 	<!--{elseif $operation == 'drop'}-->
-		<button class="pn pnc" type="submit" name="operatesubmit" id="operatesubmit" value="true" onclick="return confirmMagicOp(e)"><span>{lang magics_operation_drop}</span></button>
+		<button class="pn pnc u-mask-close" type="submit" name="operatesubmit" id="operatesubmit" value="true" onclick="return confirmMagicOp(e)"><span>{lang magics_operation_drop}</span></button>
 	<!--{/if}-->
 </div>
 <!--{if empty($_GET['infloat'])}--></div><!--{/if}-->
